apps/unifi/unifi-guest/unifi-landing-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-landing
  namespace: unifi
spec:
  selector:
    matchLabels:
      app: unifi-landing
  template:
    metadata:
      labels:
        app: unifi-landing
    spec:
      containers:
      - name: unifi-landing
        image: nginx:1.26.0
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - mountPath: /etc/nginx/conf.d/
            name: unifi-landing-config
          - mountPath: /var/www
            name: unifi-landing-static-secret
      volumes:
      - emptyDir: {}
        name: unifi-landing-config
      - name: unifi-landing-secret
        secret:
          secretName: unifi-landing
      - name: unifi-landing-static-secret
        secret:
          secretName: unifi-landing-static
