apps/unifi/unifi-guest/unifi-guest-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-guest
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.passhostheader: "true"
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  selector:
    app: unifi
  ports:
  - port: 8843
    protocol: TCP
    name: guestportaltls
  - port: 8880
    protocol: TCP
    name: guestportalhttp
  type: ClusterIP
  clusterIP: None
