apps/unifi/unifi-guest/unifi-landing-service.yml
apiVersion: v1
kind: Service
metadata:
  name: unifi-landing
  namespace: unifi
spec:
  selector:
    app: unifi-landing
  ports:
  - protocol: TCP
    port: 80
    name: http
  type: ClusterIP
  clusterIP: None
