apps/unifi/unifi-guest/unifi-guest-httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi-guest-https
  namespace: unifi
spec:
  parentRefs:
  - name: external-gateway
    namespace: default
    sectionName: unifi-guest-https
  hostnames:
  - "unifi.guest.sholdee.net"
  rules:
  - matches:
      - path:
          type: PathPrefix
          value: /landing
    backendRefs:
      - name: unifi-landing
        port: 80
        kind: Service
  - backendRefs:
    - name: unifi-guest
      port: 8880
      kind: Service
